<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/logo"
            style="@style/ui_logo"
            android:layout_marginTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/Code"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:background="@drawable/corner_text"
            android:hint="@string/please_code"
            android:inputType="phone" >
        </EditText>

        <com.atayun.hgs.modle.TimeButton
            android:id="@+id/getCode"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:background="@drawable/corner_button"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="@string/get_code" />
    </LinearLayout>
	<TextView
	    android:id="@+id/remind_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/remind_text" 
            android:textSize="16sp"
            android:textColor="#b7b7b7">
	    
	</TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:orientation="vertical" 
        >

        <EditText
            android:id="@+id/Password"
            style="@style/ui_edittext"
            android:background="@drawable/corner_text"
            android:hint="@string/please_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/confirm"
            style="@style/ui_buttton"
            android:layout_marginTop="20dp"
            android:background="@drawable/corner_button"
            android:text="@string/password_confirm" />
    </LinearLayout>
	

</LinearLayout>